Fix: social button invisible on mobile device

--- a/index.css
+++ b/index.css
@@ -933,6 +933,10 @@ h1 {
         margin: 30px 0px;
     }
 
+    #social svg {
+        color:rgb(236, 113, 87);
+    }
+
     .dummy-gallery img {
         width: 100%;
         margin: 15px 0px;
